closer to blocks actually doing something

--- a/blockcode/index.html
+++ b/blockcode/index.html
@@ -18,6 +18,9 @@
 	<div class="script">
 		<h2>Script</h2>
 	</div>
+	<canvas class="turtle-canvas"></canvas>
 	<script src="blocks.js"></script>
+	<script src="turtle.js"></script>
+	<script src="menu.js"></script>
 </body>
 </html>
