can position blocks in the script now

--- a/blockcode/index.html
+++ b/blockcode/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 	<h1>Block Code</h1>
-	<div class="menu">
+	<div class="menu-column">
 		<h2>Menu</h2>
+		<div class="menu"></div>
 	</div>
-	<div class="script">
+	<div class="script-column">
 		<h2>Script</h2>
+		<div class="script"></div>
 	</div>
 	<canvas class="turtle-canvas"></canvas>
 	<script src="blocks.js"></script>
