refactored for script building

--- a/blockcode/index.html
+++ b/blockcode/index.html
@@ -16,6 +16,7 @@
 		<div class="script"></div>
 	</div>
 	<canvas class="turtle-canvas"></canvas>
+	<script src="drag.js"></script>
 	<script src="blocks.js"></script>
 	<script src="turtle.js"></script>
 	<script src="menu.js"></script>
