commend out define block

--- a/blockcode/index.html
+++ b/blockcode/index.html
@@ -15,10 +15,11 @@
 		<h2>Script</h2>
 		<div class="script"></div>
 	</div>
-	<canvas class="turtle-canvas"></canvas>
+	<canvas class="canvas"></canvas>
 	<script src="drag.js"></script>
 	<script src="blocks.js"></script>
-	<script src="turtle.js"></script>
 	<script src="menu.js"></script>
+	<!-- the turtle.js file is the only thing specific to the turtle language, the rest can be re-used -->
+	<script src="turtle.js"></script>
 </body>
 </html>
