--- a/blockcode/index.html
+++ b/blockcode/index.html
@@ -12,10 +12,16 @@
 		<div class="menu"></div>
 	</div>
 	<div class="script-column">
-		<h2>Script</h2>
+		<h2>
+			Script:
+			<button class="clear-action">Clear</button>
+			<button class="save-action">Save</button>
+			<button class="load-action">Load</button>
+		</h2>
 		<div class="script"></div>
 	</div>
 	<canvas class="canvas"></canvas>
+	<script src="util.js"></script>
 	<script src="drag.js"></script>
 	<script src="blocks.js"></script>
 	<script src="menu.js"></script>
