--- a/blockcode/index.html
+++ b/blockcode/index.html
@@ -24,6 +24,7 @@
 	<script src="util.js"></script>
 	<script src="drag.js"></script>
 	<script src="blocks.js"></script>
+	<script src="file.js"></script>
 	<script src="menu.js"></script>
 	<!-- the turtle.js file is the only thing specific to the turtle language, the rest can be re-used -->
 	<script src="turtle.js"></script>
