--- a/tiled-renderer/index.html
+++ b/tiled-renderer/index.html
@@ -10,7 +10,7 @@
   <h1>A Tiled Renderer<span style="font-size: 10pt"> by Pierre-Antoine LaFayette</span></h1>
   <img src="images/A_Song_of_Ice_and_Fire.jpg" width="720" height="480"/>
   <canvas id="glCanvas" width="270" height="480"></canvas> <!-- 16x9 -->
-  <p class="info">Scroll the image in the WebGL canvas on the right with by clicking and moving the mouse.</p>
+  <p class="info">Scroll the image in the WebGL canvas on the right by clicking and moving the mouse.</p>
   <br/><br/>
   <div id="log"></div>
 
