Moving some directories up to make room for directory listing, and describing how we serve static files

--- a/web-server/02-serve-static/plain.html
+++ b/web-server/02-serve-static/plain.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>Nitinat Plain Page</title>
+<title>Plain Page</title>
 </head>
 <body>
-<h1>Nitinat Plain Page</h1>
+<h1>Plain Page</h1>
 <p>Nothin' but HTML.</p>
 </body>
 </html>
