--- a/web-server/04-cgi/plain.html
+++ b/web-server/04-cgi/plain.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-<title>Nitinat Plain Page</title>
+<title>Plain Page</title>
 </head>
 <body>
-<h1>Nitinat Plain Page</h1>
+<h1>Plain Page</h1>
 <p>Nothin' but HTML.</p>
 </body>
 </html>
