Refactor to avoid global variables and avoid assigning methods in a separate location from implementation.

--- a/ocr/ocr.html
+++ b/ocr/ocr.html
@@ -4,15 +4,15 @@
 	<script src="ocr.js"></script>
 	<link rel="stylesheet" type="text/css" href="ocr.css">
 </head>
-<body onload="onLoadFunction()">
+<body onload="ocrDemo.onLoadFunction()">
 	<div id="main-container" style="text-align: center;">
 		<h1>OCR Demo</h1>
 		<canvas id="canvas" width="200" height="200"></canvas>
 		<form name="input">
 			<p>Digit: <input id="digit" type="text"> </p>
-			<input type="button" value="Train" onclick="train()">
-			<input type="button" value="Test" onclick="test()">
-			<input type="button" value="Reset" onclick="resetCanvas();"/>
+			<input type="button" value="Train" onclick="ocrDemo.train()">
+			<input type="button" value="Test" onclick="ocrDemo.test()">
+			<input type="button" value="Reset" onclick="ocrDemo.resetCanvas();"/>
 		</form> 
 	</div>
 </body>
