add examples menu, load examples

--- a/blockcode/index.html
+++ b/blockcode/index.html
@@ -20,12 +20,25 @@
 		</h2>
 		<div class="script"></div>
 	</div>
-	<canvas class="canvas"></canvas>
+	<div class="canvas-column">
+		<h2>Examples:
+			<select class="choose-example">
+				<option value="">Choose Example</option>
+				<option value="triangle">Triangle</option>
+				<option value="circle">Tiny Circle</option>
+				<option value="spiral">Spiral</option>
+			</select>
+		</h2>
+		<canvas class="canvas"></canvas>
+	</div>
 	<script src="util.js"></script>
 	<script src="drag.js"></script>
 	<script src="file.js"></script>
 	<script src="blocks.js"></script>
 	<script src="menu.js"></script>
 	<script src="turtle.js"></script>
+	<script src="examples/spiral.js"></script>
+	<script src="examples/tiny_circle.js"></script>
+	<script src="examples/triangle.js"></script>
 </body>
 </html>
