Add support for retina (HDPI) displays.

--- a/blockcode/index.html
+++ b/blockcode/index.html
@@ -29,6 +29,7 @@
 				<option value="spiral">Spiral</option>
 			</select>
 		</h2>
+		<div class="canvas-placeholder"></div>
 		<canvas class="canvas"></canvas>
 	</div>
 	<script src="util.js"></script>
