--- a/spreadsheet/index.html
+++ b/spreadsheet/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
   <script src="lib/angular.js"></script>
   <script src="dist/main.js"></script>
+  <link href="styles.css" rel="stylesheet">
 </head><body ng-app ng-cloak ng-controller="Spreadsheet">
   <table><tr>
     <th>
@@ -14,34 +15,4 @@
       <div ng-class="{ error: errs[col+row] }">{{ errs[col+row] || vals[col+row] }}&nbsp;</div>
     </td>
   </tr></table>
-  <style>
-    input {
-      border: 0;
-      padding: 0;
-      width: 120px;
-      height: 1.3em;
-      font-size: 100%;
-      position: absolute;
-      color: transparent;
-      background: transparent;
-    }
-    input:focus {
-      color: #111;
-      background: #efe;
-    }
-    input:focus + div { white-space: nowrap }
-    table { border-collapse: collapse }
-    td div {
-      width: 120px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    td div.error { color: #600 }
-    td.formula { background: #eef }
-    th {
-      width: 30px;
-      background: #ddd;
-    }
-    td, th { border: 1px solid #ccc }
-  </style>
 </body></html>
