--- a/spreadsheet/index.html
+++ b/spreadsheet/index.html
@@ -4,9 +4,7 @@
   <link href="styles.css" rel="stylesheet">
 </head><body ng-app ng-cloak ng-controller="Spreadsheet">
   <table><tr>
-    <th>
-      <a target="_blank" href="https://github.com/audreyt/500lines/tree/master/spreadsheet">&hellip;</a>
-    </th>
+    <th><button ng-click="reset(); calc()" title="Reset">&#x21BB;</button></th>
     <th ng-repeat="col in Cols">{{ col }}</th>
   </tr><tr ng-repeat="row in Rows">
     <th>{{ row }}</th>
