--- a/tiled-renderer/index.html
+++ b/tiled-renderer/index.html
@@ -10,16 +10,16 @@
 
   <img src="images/A_Song_of_Ice_and_Fire.jpg" width="720" height="480"/>
 
-  <canvas id="glCanvas" width="270" height="480"></canvas> <!-- 16x9 -->
+  <canvas id="glCanvas" width="320" height="480"></canvas> <!-- iPhone 1 sized -->
 
-  <p class="info">Scroll the image in the WebGL canvas on the right with by clicking and moving the mouse.</p>
+  <p class="info">Scroll the image in the WebGL canvas on the right by clicking with the mouse and dragging.</p>
   <br/><br/>
 
   <div id="log"></div>
 
-  <script type="text/javascript" src="third_party/gl-matrix/gl-matrix.js"></script>
   <script type="text/javascript" src="src/logger.js"></script>
   <script type="text/javascript" src="src/timer.js"></script>
+  <script type="text/javascript" src="src/matrix3.js"></script>
   <script type="text/javascript" src="src/shader.js"></script>
   <script type="text/javascript" src="src/renderer.js"></script>
 </body>
