--- a/spreadsheet/index.html
+++ b/spreadsheet/index.html
@@ -9,7 +9,7 @@
   </tr><tr ng-repeat="row in Rows">
     <th>{{ row }}</th>
     <td ng-repeat="col in Cols" ng-class="{ formula: ( '=' === sheet[col+row][0] ) }">
-      <input id="{{ col+row }}" ng-model="sheet[col+row]" ng-change="calc()" ng-keydown="press($event, col, row)">
+      <input id="{{ col+row }}" ng-model="sheet[col+row]" ng-change="calc()" ng-keydown="keydown($event, col, row)">
       <div ng-class="{ error: errs[col+row] }">{{ errs[col+row] || vals[col+row] }}&nbsp;</div>
     </td>
   </tr></table>
