* Load worker.js first to ensure cache

--- a/spreadsheet/es5/index.html
+++ b/spreadsheet/es5/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
   <script src="main.js"></script>
   <script>if (!window.Spreadsheet) { location.href = "es5/index.html" }</script>
+  <script src="worker.js"></script>
   <script src="lib/angular.js"></script>
   <link href="styles.css" rel="stylesheet">
 </head><body ng-app ng-cloak ng-controller="Spreadsheet">
