--- a/spreadsheet/es5/index.html
+++ b/spreadsheet/es5/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8">
   <script src="main.js"></script>
-  <script>if (!window.Spreadsheet) { location.href = "es5/index.html" }</script>
+  <script>if (!window.Spreadsheet) { window.stop(); location.href = "es5/index.html" }</script>
   <script src="worker.js"></script>
   <script src="lib/angular.js"></script>
   <link href="styles.css" rel="stylesheet">
@@ -12,7 +12,7 @@
     <th>{{ row }}</th>
     <td ng-repeat="col in Cols" ng-class="{ formula: ( '=' === sheet[col+row][0] ) }">
       <input id="{{ col+row }}" ng-model="sheet[col+row]" ng-change="calc()" ng-keydown="keydown($event, col, row)">
-      <div ng-class="{ error: errs[col+row] }">{{ errs[col+row] || vals[col+row] }}&nbsp;</div>
+      <div ng-class="{ error: errs[col+row], text: vals[col+row][0] }">{{ errs[col+row] || vals[col+row] }}&nbsp;</div>
     </td>
   </tr></table>
 </body></html>
