* Beginning of code walkthrough

--- a/spreadsheet/index.html
+++ b/spreadsheet/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="utf-8">
+<!DOCTYPE html><html><head><meta charset="UTF-8">
   <script src="main.js"></script>
   <script>if (!window.Spreadsheet) { location.href = "es5/index.html" }</script>
   <script src="worker.js"></script>
