--- a/spreadsheet/es5/index.html
+++ b/spreadsheet/es5/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html><html><head><meta charset="utf-8">
+<!DOCTYPE html><html><head><meta>
   <script src="main.js"></script>
-  <script>if (!window.Spreadsheet) { window.stop(); location.href = "es5/index.html" }</script>
+  <script>if (!window.Spreadsheet) { location.href = "es5/index.html" }</script>
   <script src="worker.js"></script>
   <script src="lib/angular.js"></script>
   <link href="styles.css" rel="stylesheet">
