--- a/spreadsheet/es5/index.html
+++ b/spreadsheet/es5/index.html
@@ -1,1 +1,20 @@
-../index.html
+<!DOCTYPE html><html><head><meta charset="UTF-8">
+  <script src="main.js"></script>
+  <script>if (!window.Spreadsheet) { location.href = "es5/index.html" }</script>
+  <script src="worker.js"></script>
+  <script src="lib/angular.js"></script>
+  <link href="styles.css" rel="stylesheet">
+</head><body ng-app ng-cloak ng-controller="Spreadsheet">
+  <table><tr>
+    <th><button ng-click="reset(); calc()" title="Reset">↻</button></th>
+    <th ng-repeat="col in Cols">{{ col }}</th>
+  </tr><tr ng-repeat="row in Rows">
+    <th>{{ row }}</th>
+    <td ng-repeat="col in Cols" ng-class="{ formula: ( '=' === sheet[col+row][0] ) }">
+      <input id="{{ col+row }}" ng-model="sheet[col+row]" ng-change="calc()"
+                                ng-keydown="keydown( $event, col, row )">
+      <div ng-class="{ error: errs[col+row], text: vals[col+row][0] }">
+        {{ errs[col+row] || vals[col+row] }}&nbsp;</div>
+    </td>
+  </tr></table>
+</body></html>
