--- a/spreadsheet/es5/index.html
+++ b/spreadsheet/es5/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="UTF-8">
   <script src="main.js"></script>
-  <script>if (!window.Spreadsheet) { location.href = "es5/index.html" }</script>
+  <script>if (!this.Spreadsheet) { location.href = "es5/index.html" }</script>
   <script src="worker.js"></script>
   <script src="lib/angular.js"></script>
   <link href="styles.css" rel="stylesheet">
@@ -14,7 +14,7 @@
       <input id="{{ col+row }}" ng-model="sheet[col+row]" ng-change="calc()"
                                 ng-keydown="keydown( $event, col, row )">
       <div ng-class="{ error: errs[col+row], text: vals[col+row][0] }">
-        {{ errs[col+row] || vals[col+row] }}&nbsp;</div>
+        {{ errs[col+row] || vals[col+row] }}</div>
     </td>
   </tr></table>
 </body></html>
