--- a/spreadsheet/index.html
+++ b/spreadsheet/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="UTF-8">
   <script src="main.js"></script>
-  <script>if (!this.Spreadsheet) { location.href = "es5/index.html" }</script>
+  <script>if (!self.Spreadsheet) { location.href = "es5/index.html" }</script>
   <script src="worker.js"></script>
   <script src="lib/angular.js"></script>
   <link href="styles.css" rel="stylesheet">
