* Use Traceur 0.5.0 (not yet released) to generate source maps.

--- a/spreadsheet/es5/index.html
+++ b/spreadsheet/es5/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><head><meta charset="UTF-8">
+  <script src="../node_modules/traceur/bin/traceur-runtime.js"></script>
   <script src="main.js"></script>
   <script src="worker.js"></script>
   <script src="../lib/angular.js"></script>
