--- a/spreadsheet/as-livescript-1.2.0/index.html
+++ b/spreadsheet/as-livescript-1.2.0/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html><head><meta charset="UTF-8">
-  <script src="main.js"></script>
   <script src="../lib/angular.js"></script>
+  <script src="main.js"></script>
   <link href="../styles.css" rel="stylesheet">
-</head><body ng-app ng-cloak ng-controller="Spreadsheet">
+</head><body ng-app="500lines" ng-controller="Spreadsheet" ng-cloak>
   <table><tr>
     <th><button type="button" ng-click="reset(); calc()">↻</button></th>
     <th ng-repeat="col in Cols">{{ col }}</th>
