--- a/spreadsheet/es5/index.html
+++ b/spreadsheet/es5/index.html
@@ -3,7 +3,7 @@
   <script src="../node_modules/traceur/bin/traceur-runtime.js"></script>
   <script src="main.js"></script>
   <link href="../styles.css" rel="stylesheet">
-</head><body ng-app ng-cloak ng-controller="Spreadsheet">
+</head><body ng-app="500lines" ng-controller="Spreadsheet" ng-cloak>
   <table><tr>
     <th><button type="button" ng-click="reset(); calc()">↻</button></th>
     <th ng-repeat="col in Cols">{{ col }}</th>
@@ -11,7 +11,7 @@
     <th>{{ row }}</th>
     <td ng-repeat="col in Cols" ng-class="{ formula: ( '=' === sheet[col+row][0] ) }">
       <input id="{{ col+row }}" ng-model="sheet[col+row]" ng-change="calc()"
-             ng-model-options="{ debounce: 200 }" ng-keydown="keydown( $event, col, row )">
+       ng-model-options="{ debounce: 200 }" ng-keydown="keydown( $event, col, row )">
       <div ng-class="{ error: errs[col+row], text: vals[col+row][0] }">
         {{ errs[col+row] || vals[col+row] }}</div>
     </td>
