reunification 90% complete; sections solidified

--- a/dagoba/perf.html
+++ b/dagoba/perf.html
@@ -308,6 +308,18 @@
       new style 100000x10, size: 15, time:  7 perf.html:25
       new style 1000000x1, size: 39, time:  6 
   
+  
+  
+Example
+```
+vertices x iterations, size of searched set, total time in ms
+1000x1000, size: 50, time: 2962
+10000x100, size: 26, time: 169
+100000x10, size: 39, time: 39
+1000000x1, size: 35, time: 4
+```
+  
+  
   */
   
 </script>
