have square moving in gamelib blocks

--- a/blockcode/gamelib/index.html
+++ b/blockcode/gamelib/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Block Code</title>
-    <link rel="stylesheet" type="text/css" href="blocks.css" />
+    <title>Game Blocks</title>
+    <link rel="stylesheet" type="text/css" href="../blocks.css" />
 </head>
 <body>
-    <h1>Block Code</h1>
+    <h1>Game Blocks</h1>
     <div class="menu-column">
         <h2>Menu</h2>
         <div class="menu"></div>
@@ -24,22 +24,22 @@
         <h2>Examples:
             <select class="choose-example">
                 <option value="">Choose Example</option>
-                <option value="triangle">Triangle</option>
-                <option value="circle">Tiny Circle</option>
-                <option value="spiral">Spiral</option>
+                <option value="spacewar">Spacewar</option>
+                <option value="asteroids">Asteroids</option>
+                <option value="invaders">Invaders</option>
             </select>
         </h2>
         <div class="canvas-placeholder"></div>
         <canvas class="canvas"></canvas>
     </div>
-    <script src="util.js"></script>
-    <script src="drag.js"></script>
-    <script src="file.js"></script>
-    <script src="blocks.js"></script>
-    <script src="menu.js"></script>
+    <script src="../util.js"></script>
+    <script src="../drag.js"></script>
+    <script src="../file.js"></script>
+    <script src="../blocks.js"></script>
+    <script src="../menu.js"></script>
     <script src="game.js"></script>
-    <script src="examples/spiral.js"></script>
-    <script src="examples/tiny_circle.js"></script>
-    <script src="examples/triangle.js"></script>
+    <script src="examples/spacewar.js"></script>
+    <script src="examples/asteroids.js"></script>
+    <script src="examples/invaders.js"></script>
 </body>
 </html>
