--- a/spreadsheet/code/es5/index.html
+++ b/spreadsheet/code/es5/index.html
@@ -10,7 +10,7 @@
   </tr><tr ng-repeat="row in Rows">
     <th>{{ row }}</th>
     <td ng-repeat="col in Cols" ng-class="{ formula: ( '=' === sheet[col+row][0] ) }">
-      <input id="{{ col+row }}" ng-model="sheet[col+row]" ng-change="calc()"
+      <input id="{{ col+row }}" spellcheck="false" ng-model="sheet[col+row]" ng-change="calc()"
        ng-model-options="{ debounce: 200 }" ng-keydown="keydown( $event, col, row )">
       <div ng-class="{ error: errs[col+row], text: vals[col+row][0] }">
         {{ errs[col+row] || vals[col+row] }}</div>
